fix a few dark mode bugs

--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -64,16 +64,29 @@ body.dark {
   color: var(--textNormal);
 }
 
-#mobile-dark-button {
-  display: none;
-  /* border: 1px solid green; */
-}
-
 #theme-name {
+  box-sizing: border-box;
+  appearance: none;
   display: flex;
-  font-size: 16px;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  line-height: inherit;
+  color: white;
+  background-color: #187eaa;
+  cursor: pointer;
+  font-size: 14.6205px;
+  min-width: 48px;
+  margin: 0px 14.5px 0px 0px;
+  text-decoration: none;
+  border-width: 0px;
+  border-style: initial;
+  border-color: initial;
+  border-image: initial;
+  border-radius: 4px;
+  padding: 2px 3px;
   /* border: 1px solid red; */
-  padding: 0.1rem 0.4rem;
+  margin-left: auto;
   -webkit-user-select: none; /* Safari */
   -ms-user-select: none; /* IE 10+ and Edge */
   user-select: none; /* Standard syntax */
@@ -108,27 +121,18 @@ body.dark {
 #header-list {
   color: var(--textNormal);
   display: flex;
-  width: 50%;
   justify-content: flex-end;
   align-items: center;
   margin-left: auto;
-  margin-bottom: auto;
-  margin-top: auto;
   /* border: 1px solid red; */
+}
+
+#header-list :nth-child(4){
+ margin-left: 20px;
 }
 
 #mobile-header-elements {
   display: none;
-}
-
-#dark-button {
-  /* border: 1px solid yellow; */
-  display: flex;
-  cursor: pointer;
-  border-radius: 5px;
-  margin-left: 10px;
-  color: white !important;
-  background-color: #187eaa;
 }
 
 #list-link-style span {
@@ -528,7 +532,6 @@ blockquote {
   line-height: 1.625;
 }
 
-
 #about-image {
   width: 50%;
   margin-left: auto;
@@ -769,56 +772,32 @@ blockquote {
   #main {
     padding: 0px 29px;
     width: auto;
+    /* border: 1px solid green; */
     /* width: 100%; */
   }
 
   #header {
-    width: 100%;
-    /* margin: 8px; */
-    height: 50px;
+    width: auto;
+    height: 60px;
+    padding: 0px 14.5px;
     /* border: 1px solid red; */
     /* box-shadow: 0 1px 0 rgba(255, 255, 255, 0.15); */
   }
 
-  #header-logo {
-    margin-left: 8px;
-    /* border: 1px solid yellowgreen; */
-  }
-
-  #mobile-dark-button {
-    box-sizing: border-box;
-    appearance: none;
-    display: inline-block;
-    text-align: center;
-    line-height: inherit;
-    color: white;
-    background-color: #187eaa;
-    cursor: pointer;
-    font-size: 14.6205px;
-    min-width: 48px;
-    margin: 0px 14.5px 0px 0px;
-    text-decoration: none;
-    border-width: 0px;
-    border-style: initial;
-    border-color: initial;
-    border-image: initial;
-    border-radius: 4px;
-    padding: 5px 7px;
-    margin-left: auto;
-  }
-
   #mobile-header-elements {
     display: flex;
+    align-items: center;
     margin-left: auto;
+    /* border: 1px solid blue; */
   }
 
   #menu-button {
     display: flex;
-    justify-content: center;
+    justify-content: flex-end;
     align-items: center;
     margin-left: auto;
-    width: 36px;
-    height: 30px;
+    width: auto;
+    height: auto;
     /* border: 1px solid red; */
   }
 
